# Aurora

./: .gitignore  CMakeLists.txt  ElementNames.txt  LICENSE.TXT  Literature.txt  README.txt
AuroraLib/: Atom.hpp  Bandlimit.cpp  Bandlimit.hpp  BinaryIStream.hpp  BinaryOStream.hpp  Buffer2DInfo.hpp  CBuffer2D.cpp  CBuffer2D.hpp  CBuffer2DCodecTiff.cpp  CBuffer2DCodecTiff.hpp  CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  CompilerAbstraction.hpp  Complex.hpp  Config.hpp.in  Crystal.cpp  Crystal.hpp  Ctf.cpp  Ctf.hpp  CtfIncoherent.cpp  CtfIncoherent.hpp  Element.cpp  Element.hpp  ElementDoyle.cpp  ElementGaussian.hpp  ElementHydrogen.hpp  ElementKirkland.cpp  ElementLobato.cpp  ElementPeng.cpp  ElementWeickenmeier.cpp  ElementWentzel.cpp  Energy.hpp  Exception.cpp  Exception.hpp  Factory.hpp  Fft.cpp  Fft.hpp  FftFftw.cpp  FftFftw.hpp  (+71 more)
CMake/: AddCompilerFlag.cmake  EnableUnityBuild.cmake  FindFFTW.cmake  FindIntelBLAS.cmake  FindIntelLAPACK.cmake  FindQwt.cmake  FindSphinx.cmake  Version.cmake
Clients/: CMakeLists.txt
Clients/Bench/: Bench.cpp  CMakeLists.txt
Clients/Compare/: CMakeLists.txt  Compare.cpp
Clients/Converter/: CMakeLists.txt  Converter.cpp
Clients/CrossSection/: CMakeLists.txt  CrossSection.cpp
Clients/EMule/: CMakeLists.txt  EMule.cpp
Clients/FormFactor/: CMakeLists.txt  FormFactor.cpp
Clients/Ice/: CMakeLists.txt  Ice.cpp  InelasticSimulation.cpp  InelasticSimulation.hpp  MutualCoherenceFunction.cpp  MutualCoherenceFunction.hpp
Clients/Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  Pass.cpp  Pass.hpp  Pass1.cpp  Pass1.hpp  Pass2.cpp  Pass2.hpp  Pass3.cpp  Pass3.hpp  PassBandlimit.cpp  PassBandlimit.hpp  PassPower.cpp  PassPower.hpp  PassScanning.cpp  PassScanning.hpp  PassTem.cpp  PassTem.hpp
Clients/ModelBuilder/: CMakeLists.txt  ModelBuilder.cpp  ModelBuilder.hpp  ModelBuilderMain.ui
Clients/Multiply/: CMakeLists.txt  Multiply.cpp
Clients/OpSys/: CMakeLists.txt  OpSys.cpp
Clients/OpSys2/: CMakeLists.txt  OpSys2.cpp  OpSys2.hpp  OpSys2Main.ui
Clients/Reduce/: CMakeLists.txt  Reduce.cpp
Clients/Reslice/: CMakeLists.txt  Reslice.cpp
Clients/Simulator/: CMakeLists.txt  Simulator.cpp  Simulator.hpp  SimulatorMain.ui
Clients/Subtract/: CMakeLists.txt  Subtract.cpp
Clients/Toy/: CMakeLists.txt  Toy.cpp
Clients/View/: CMakeLists.txt  MainView.ui  View.cpp  View.hpp
Docs/: CMakeLists.txt  Doxyfile.in  build.txt  cluster.txt  conf.py.in  index.html  index.txt
Libs/: versions.txt
Libs/Eigen/: .hg_archival.txt
QtSupport/: CMakeLists.txt  QView.cpp  QView.hpp  QtSupport.cpp  QtSupport.hpp
UnitTest/: CBuffer2DTest.cpp  CMakeLists.txt  CtfTest.cpp  FactoryTest.cpp  FftTest.cpp  HistogramTest.cpp  MathTest.cpp  MemoryTest.cpp  PhysicsTest.cpp  QuadratureTest.cpp  RBuffer2DTest.cpp  RelativeError.hpp  SmallVectorTest.cpp  StatisticsTest.cpp  StringRefTest.cpp  UnitTest.cpp  UtilsTest.cpp
